discord-frontend/hartex-discord-commands-test/tests/ui/no_attributes_after_derive.stderr
error: expected `metadata` attributes after derive
  --> tests/ui/no_attributes_after_derive.rs:25:10
   |
25 | #[derive(CommandMetadata)]
   |          ^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `CommandMetadata` (in Nightly builds, run with -Z macro-backtrace for more info)
